force-app/main/default/objects/Opportunity/fields/Method_of_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_First_Contact__c</fullName>
    <description>Note the method the customer first reached out or was introduced to Ubiquity. This is not Lead Source.</description>
    <inlineHelpText>Note the method the customer first reached out or was introduced to Ubiquity. This is not Lead Source</inlineHelpText>
    <label>Method of First Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Form Fill Out</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Direct Sale</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner Sale</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>