force-app/main/default/objects/Opportunity/fields/n2de__DE_Territory__c.field-meta.xml
<CustomField>
    <fullName>n2de__DE_Territory__c</fullName>
    <description>Deprecated, use Distribution_engine_details__c.Territory__c instead</description>
    <label>DE Territory (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>