force-app/main/default/objects/Opportunity/fields/NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Error__c</fullName>
    <description>Used by the Jitterbit integration and holds any sync errors encountered during the integration with NetSuite</description>
    <label>NetSuite Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>