force-app/main/default/objects/Opportunity/fields/New_Plan_Provisions__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Provisions__c</fullName>
    <description>Outline of new plan provisions, used for Upgrade Opportunities</description>
    <label>New Plan Provisions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>