force-app/main/default/objects/Opportunity/fields/Next_Step_Activity__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Activity__c</fullName>
    <description>Outline the next step for the partnership to move forward</description>
    <label>Next Step/Activity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>