force-app/main/default/objects/Opportunity/fields/No_Response__c.field-meta.xml
<CustomField>
    <fullName>No_Response__c</fullName>
    <description>Indicates if the Opportunity Stage is set to No Response</description>
    <formula>IF(ISPICKVAL(StageName, &quot;(I) No Response&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Opportunity Stage is set to No Response</inlineHelpText>
    <label>No Response?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>