force-app/main/default/objects/Opportunity/fields/Notification_date__c.field-meta.xml
<CustomField>
    <fullName>Notification_date__c</fullName>
    <label>Notification date</label>
    <type>Date</type>
</CustomField>