force-app/main/default/objects/Opportunity/fields/Number_of_Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities_Completed__c</fullName>
    <description>Adds Events and Tasks together for total completed activities</description>
    <formula>Number_of_Events_Completed__c +  Number_of_Tasks_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adds Events and Tasks together for total completed activities</inlineHelpText>
    <label>Number of Activities Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>