force-app/main/default/objects/Opportunity/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Used for fee calculations</description>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for fee calculations</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>