force-app/main/default/objects/Opportunity/fields/Number_of_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_Completed__c</fullName>
    <description>Number of tasks completed for a given Opportunity</description>
    <inlineHelpText>Number of tasks completed for a given Opportunity</inlineHelpText>
    <label>Number of Tasks Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>