force-app/main/default/objects/Opportunity/fields/Offer_495__c.field-meta.xml
<CustomField>
    <fullName>Offer_495__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer?</label>
    <type>Checkbox</type>
</CustomField>