force-app/main/default/objects/Opportunity/fields/OPD_Complete__c.field-meta.xml
<CustomField>
    <fullName>OPD_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPD Complete</label>
    <type>Checkbox</type>
</CustomField>