force-app/main/default/objects/Opportunity/fields/Opportunies_Costco_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunies_Costco_Member_ID__c</fullName>
    <formula>Account.Costco_Member_ID__c</formula>
    <label>Opportunies Costco Member ID</label>
    <type>Text</type>
</CustomField>