force-app/main/default/objects/Opportunity/fields/Opportunity_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Confidence__c</fullName>
    <description>Visualization of confidence in Opportunities. Populates based on &quot;Opportunity Win Confidence&quot; metric.</description>
    <formula>IF( Opportunity_Win_Confidence__c  &gt;= 0.7, IMAGE(&quot;https://myubiquity.file.force.com/servlet/servlet.FileDownload?file=01537000000ZQaq&quot;, &quot;Green Icon&quot;,30,30),
   IF( Opportunity_Win_Confidence__c  &gt;= 0.5, IMAGE(&quot;https://myubiquity.file.force.com/servlet/servlet.FileDownload?file=01537000000ZQav&quot;, &quot;Yellow Icon&quot;,30,30),
     IF( Opportunity_Win_Confidence__c &lt;  0.5, IMAGE(&quot;https://myubiquity.file.force.com/servlet/servlet.FileDownload?file=01537000000ZQb0&quot;, &quot;Red Icon&quot;,30,30),
       IMAGE(&quot;https://myubiquity.file.force.com/servlet/servlet.FileDownload?file=01537000000ZQbF&quot;, &quot;Unknown&quot;,30,30)
)))</formula>
    <inlineHelpText>Visualization of confidence in Opportunities. Populates based on &quot;Opportunity Win Confidence&quot; metric.</inlineHelpText>
    <label>Opportunity Confidence</label>
    <type>Text</type>
</CustomField>