force-app/main/default/objects/Opportunity/fields/Opportunity_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_Char__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID (18 Char)</label>
    <type>Text</type>
</CustomField>