force-app/main/default/objects/Opportunity/fields/Opportunity_Origin__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Origin__c</fullName>
    <description>How was this Opportunity generated? Ubiquity Generated is anything that comes from the website, or partners and goes through the standard distribution. Rep Generated is anything that the RPC Team generates themselves and goes right to that rep.</description>
    <inlineHelpText>How was this Opportunity generated? Ubiquity Generated is anything that comes from the website, or partners and goes through the standard distribution. Rep Generated is anything that the RPC Team generates themselves and goes right to that rep.</inlineHelpText>
    <label>Opportunity Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Generated</fullName>
            </value>
            <value>
                <fullName>Rep Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>