force-app/main/default/objects/Opportunity/fields/Opportunity_Win_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Win_Confidence__c</fullName>
    <description>How confident are you in winning this partnership? This is a subjective measurement that will be used to gauge the health of the BD pipeline. Please use numbers between 0-100 only.</description>
    <inlineHelpText>How confident are you in winning this partnership? This is a subjective measurement that will be used to gauge the health of the BD pipeline. Please use numbers between 0-100 only.</inlineHelpText>
    <label>Opportunity Win Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>