force-app/main/default/objects/Opportunity/fields/Other_LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>Other_LeadSourceDetail__c</fullName>
    <description>This is where you write in the Lead Source Detail if it is not provided inn the Pick List</description>
    <inlineHelpText>This is where you write in the Lead Source Detail if it is not provided inn the Pick List</inlineHelpText>
    <label>Other Lead Source Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>