force-app/main/default/objects/Opportunity/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>Owner.FirstName + &apos; &apos; +  Owner.LastName</formula>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>