force-app/main/default/objects/Opportunity/fields/OwnerIDTest__c.field-meta.xml
<CustomField>
    <fullName>OwnerIDTest__c</fullName>
    <label>OwnerIDTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>