force-app/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Partner with Shared SLA Logo</description>
    <formula>Account.Partner_Logo__c</formula>
    <inlineHelpText>Partner with Shared SLA Logo</inlineHelpText>
    <label>Partner</label>
    <type>Text</type>
</CustomField>