force-app/main/default/objects/Opportunity/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has accurate payment information been collected?</description>
    <inlineHelpText>Has accurate payment information been collected?</inlineHelpText>
    <label>Payment Information</label>
    <type>Checkbox</type>
</CustomField>