force-app/main/default/objects/Opportunity/fields/Payroll_Integration__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Integration__c</fullName>
    <description>Does customer wish to have their Payroll provider integrated for this opportunity?</description>
    <inlineHelpText>Does customer wish to have their Payroll provider integrated for this opportunity?</inlineHelpText>
    <label>Payroll Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>