force-app/main/default/objects/Opportunity/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to products and services</description>
    <label>Payroll Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Products_Services__c.Type__c</field>
            <operation>equals</operation>
            <value>Payroll Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Products_Services__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>