force-app/main/default/objects/Opportunity/fields/PCRA__c.field-meta.xml
<CustomField>
    <fullName>PCRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCRA</label>
    <type>Checkbox</type>
</CustomField>