force-app/main/default/objects/Opportunity/fields/Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Amount__c</fullName>
    <description>Used to estimate potential BD pipeline.</description>
    <formula>Total_Opportunity_Amount__c * Opportunity_Win_Confidence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to estimate potential BD pipeline.</inlineHelpText>
    <label>Pipeline Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>