force-app/main/default/objects/Opportunity/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan that is eventually created from this Opportunity</description>
    <inlineHelpText>Plan that is eventually created from this Opportunity</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>