force-app/main/default/objects/Opportunity/fields/Plan_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Plan_Eligibility__c</fullName>
    <description>When is participant eligible to enter the plan</description>
    <inlineHelpText>When is participant eligible to enter the plan</inlineHelpText>
    <label>Plan Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year (1000 Hours)</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>