force-app/main/default/objects/Opportunity/fields/Plan_Entry_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Plan_Entry_Frequency__c</fullName>
    <description>Once Participants meet service eligibility, how frequently can they enter the plan.</description>
    <inlineHelpText>Once Participants meet service eligibility, how frequently can they enter the plan.</inlineHelpText>
    <label>Plan Entry Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>