force-app/main/default/objects/Opportunity/fields/Plan_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Plan_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Upgrade</label>
    <type>Checkbox</type>
</CustomField>