force-app/main/default/objects/Opportunity/fields/Previous_Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Previous_Safe_Harbor__c</fullName>
    <label>Previous Safe Harbor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic Match (100% of 1st 3%+50% of next 2%)</fullName>
            </value>
            <value>
                <fullName>4% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>5% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>6% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>3% Non-Elective Contribution (NEC)</fullName>
            </value>
            <value>
                <fullName>3.5% QACA Match</fullName>
            </value>
            <value>
                <fullName>QACA Basic Match (100% up to 1%, 50% up to 6%)</fullName>
            </value>
            <value>
                <fullName>4% QACA Match</fullName>
            </value>
            <value>
                <fullName>5% QACA Match</fullName>
            </value>
            <value>
                <fullName>6% QACA Match</fullName>
            </value>
            <value>
                <fullName>3% QACA non-elective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>