force-app/main/default/objects/Opportunity/fields/Pricing_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tiers__c</fullName>
    <description>Formula determines the plans pricing tier based on the number of employees indicated on the account.</description>
    <formula>IF(Number_of_Employees__c  &gt; 100, &quot;101 +&quot;,
IF(Number_of_Employees__c &gt; 75, &quot;76 - 100&quot;,
IF(Number_of_Employees__c &gt; 50, &quot;51 - 75&quot;, 
IF(Number_of_Employees__c &gt; 30, &quot;31 - 50&quot;, 
IF(Number_of_Employees__c &gt; 15, &quot;16 - 30&quot;, &quot;0 - 15&quot;)))))</formula>
    <inlineHelpText>Formula determines the plans pricing tier based on the number of employees indicated on the account.</inlineHelpText>
    <label>Pricing Tiers</label>
    <type>Text</type>
</CustomField>