force-app/main/default/objects/Opportunity/fields/Product_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Effective_Date__c</fullName>
    <description>Date the client would like the Add-On Product to start</description>
    <inlineHelpText>Date the client would like the Add-On Product to start</inlineHelpText>
    <label>Product Effective Date</label>
    <type>Date</type>
</CustomField>