force-app/main/default/objects/Opportunity/fields/Product_Fit__c.field-meta.xml
<CustomField>
    <fullName>Product_Fit__c</fullName>
    <description>Does the current product/service offering for UBTY R+S and/or Paradigm align with what the prospect is looking for?
1 = No alignment with current offerings.
10 = Completely aligned with current offerings.</description>
    <inlineHelpText>Does the current product/service offering for UBTY R+S and/or Paradigm align with what the prospect is looking for?
1 = No alignment with current offerings.
10 = Completely aligned with current offerings.</inlineHelpText>
    <label>Product Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>